fix: improve scrolling on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -63,6 +63,13 @@
     }
   }
 
+  #root {
+    // HACK to fix the nav and background scrolling on mobile
+    @media (hover: none) and (pointer: coarse) {
+      @apply relative overflow-x-hidden;
+    }
+  }
+
   p,
   li,
   h1,
